--- a/index.html
+++ b/index.html
@@ -15,27 +15,29 @@
     <title>Frontend Mentor | Product preview card component</title>
   </head>
   <body>
-    <section class="product-card">
-      <img
-        src="images/image-product-desktop.jpg"
-        alt="product"
-        class="product-img"
-      />
-      <div class="product-info">
-        <p class="product-label">PERFUME</p>
-        <h1>Gabrielle Essence Eau De Parium</h1>
-        <p>
-          A floral solar and voluptuous interpretation composed by Oliver Polge,
-          Perfumer-Creator for the House of CHANEL.
-        </p>
-        <p class="product-price">
-          <span class="current-price">$149.99</span
-          ><span class="last-price">$169.99</span>
-        </p>
-        <button class="cart-btn">
-          <img src="images/icon-cart.svg" alt="icon-cart" /> Add to Cart
-        </button>
-      </div>
-    </section>
+    <main>
+      <section class="product-card">
+        <img
+          src="images/image-product-desktop.jpg"
+          alt="product"
+          class="product-img"
+        />
+        <div class="product-info">
+          <p class="product-label">PERFUME</p>
+          <h1>Gabrielle Essence Eau De Parium</h1>
+          <p>
+            A floral solar and voluptuous interpretation composed by Oliver Polge,
+            Perfumer-Creator for the House of CHANEL.
+          </p>
+          <p class="product-price">
+            <span class="current-price">$149.99</span
+            ><span class="last-price">$169.99</span>
+          </p>
+          <button class="cart-btn">
+            <img src="images/icon-cart.svg" alt="icon-cart" /> Add to Cart
+          </button>
+        </div>
+      </section>
+    </main>
   </body>
 </html>
