--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
     <title>Frontend Mentor | Product preview card component</title>
   </head>
   <body>
-    <main role="main">
-      <section class="product-card">
+      <section class="product-card" role="main">
         <img
           src="images/image-product-desktop.jpg"
           alt="product"
@@ -38,6 +37,5 @@
           </button>
         </div>
       </section>
-    </main>
   </body>
 </html>
