--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
     <title>Frontend Mentor | Product preview card component</title>
   </head>
   <body>
-      <section class="product-card" role="main">
+    <main role="main>
+      <section class="product-card">
         <img
           src="images/image-product-desktop.jpg"
           alt="product"
@@ -37,5 +38,6 @@
           </button>
         </div>
       </section>
+    </main>
   </body>
 </html>
