--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <title>Frontend Mentor | Product preview card component</title>
   </head>
   <body>
-      <section class="product-card" role="main">
+      <section class="product-card">
         <img
           src="images/image-product-desktop.jpg"
           alt="product"
