--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <title>Frontend Mentor | Product preview card component</title>
   </head>
   <body>
+    <main>
       <section class="product-card">
         <img
           src="images/image-product-desktop.jpg"
@@ -37,5 +38,6 @@
           </button>
         </div>
       </section>
+    </main>
   </body>
 </html>
